<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bugchain.android.development.sampleconnectserver.CreateNewOne">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image1"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/indigo_500_opacity_50" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?android:attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/spacing_xlarge"
            android:paddingRight="@dimen/spacing_xlarge">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="@dimen/profile_picture_width"
                android:layout_height="@dimen/profile_picture_height"
                android:src="@drawable/ic_default_profile"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:background="@drawable/shape_rec_white"
                android:scaleType="centerCrop">

                </ImageView>

            <TextView
                android:id="@+id/textInformationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_your_profile_picture"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/shape_rec_white"
                android:hint="@string/user_name"
                android:inputType="text"
                android:layout_marginTop="@dimen/spacing_xxlarge"/>

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/shape_rec_white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/spacing_large"/>

            <EditText
                android:id="@+id/textFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/shape_rec_white"
                android:hint="@string/first_name"
                android:singleLine="true"
                android:layout_marginTop="@dimen/spacing_large"/>

            <EditText
                android:id="@+id/textLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/shape_rec_white"
                android:hint="@string/last_name"
                android:singleLine="true"
                android:layout_marginTop="@dimen/spacing_large"/>

            <EditText
                android:id="@+id/textTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/shape_rec_white"
                android:hint="@string/tel"
                android:singleLine="true"
                android:inputType="phone"
                android:layout_marginTop="@dimen/spacing_large"/>

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:background="@drawable/shape_rec_white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_xxlarge"/>


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:onClick="onClick"
                android:text="@string/save"
                android:textColor="@drawable/text_selector"
                android:background="@drawable/button_selector"
                android:layout_marginBottom="@dimen/spacing_xxlarge"/>

        </LinearLayout>



    </ScrollView>

    <include layout="@layout/toolbar" />


</RelativeLayout>
