<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image10"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/indigo_500_opacity_50"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_large"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/spacing_xlarge"
        android:layout_marginRight="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_xxlarge">

        <Button
            android:id="@+id/buttonMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:onClick="onClick"
            android:text="@string/member"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/buttonCreateNewOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:onClick="onClick"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/create_new_one"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"
            android:layout_marginTop="@dimen/spacing_large"/>

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:onClick="onClick"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/update"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"
            android:layout_marginTop="@dimen/spacing_large"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:onClick="onClick"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/delete"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"
            android:layout_marginTop="@dimen/spacing_large"/>

        </LinearLayout>

    <TextView
        android:id="@+id/textCreateBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_xsmall"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="@dimen/spacing_large"/>

</RelativeLayout>
